# abodybuilder3

./: .gitignore  LICENSE.txt  README.md  download.sh  dvc.yaml  environment_cpu.yml  environment_gpu.yml  init_conda_venv.sh  noxfile.py  params.yaml  pinned-versions.txt  pyproject.toml  setup.cfg  setup.py
conda-recipe/: build.sh  meta.yaml  post-link.sh
data/: .gitignore  filters.csv  split.csv
data/structures/: success_df.csv
data/structures/structures_plm/: 6yio_H0-L0.pt
experiment_scripts/: submit_base.sh  submit_language.sh  submit_plddt.sh
notebooks/: example.ipynb
src/abodybuilder3/: dataloader.py  lightning_module.py  radam.py  utils.py
src/abodybuilder3/language/: model.py
src/abodybuilder3/loss/: __init__.py  aligned_rmsd.py  loss.py
src/abodybuilder3/openfold/: __init__.py  config.py
src/abodybuilder3/openfold/data/: data_transforms.py
src/abodybuilder3/openfold/model/: heads.py  primitives.py  structure_module.py
src/abodybuilder3/openfold/np/: protein.py  residue_constants.py
src/abodybuilder3/openfold/np/relax/: cleanup.py
src/abodybuilder3/openfold/utils/: checkpointing.py  chunk_utils.py  feats.py  loss.py  precision_utils.py  rigid_utils.py  tensor_utils.py
src/abodybuilder3/openfold/utils/kernel/: attention_core.py
src/abodybuilder3/openfold/utils/kernel/csrc/: softmax_cuda.cpp  softmax_cuda_kernel.cu  softmax_cuda_stub.cpp
src/abodybuilder3/stages/: finetune.py  inference.py  train.py
src/abodybuilder3/stages/data/: combine_data_dfs.py  filter_data.py  generate_data.py  generate_data.sh  generate_data_summary.py  generate_pdbs.py  language_model_embeddings.py  split_data.py
