[metadata]
name = abodybuilder3
description = abodybuilder3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exscientia/abodybuilder3
author = Henry Kenlay
project_urls =
    Source = https://github.com/Exscientia/abodybuilder3
    Issue tracker = https://github.com/Exscientia/abodybuilder3/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.8
include_package_data = True
install_requires =
    loguru
    typer
    click!=8.1.0
    numpy==1.21.6
    torch>=2.0.0
    einops
    dm-tree
    ml_collections
    tqdm
    lightning>=2.0.4
    dvc==2.58.2
    dvc-s3==2.22.0
    dvclive==2.11.0
    python-box
    tensorboard
    tensorboardX
    cloudpathlib
    levenshtein
    scipy==1.10.1
    pandas==1.5.3
    transformers
    sentencepiece

[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    abodybuilder3 = abodybuilder3.cli:app

[options.extras_require]
docs =
    jupytext>=1.11.2  # support for myst markdown notebooks
    myst-nb
    sphinx
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinx-inline-tabs
    sphinx-material

tests =
    coverage[toml]
    coverage-badge
    pytest

typing =
    mypy>1.4
    types-setuptools
    types-pyyaml

# 'dev' catch-all; useful for local pip install via `pip install -.e[dev]`
# Makes use of ConfigParser interpolation: https://docs.python.org/3/library/configparser.html#interpolation-of-values
dev =
    nox
    pyyaml
    setuptools_scm<8
    %(docs)s
    %(tests)s
    %(typing)s
